--- a/aquariusswaptest16.7/index.html
+++ b/aquariusswaptest16.7/index.html
@@ -472,6 +472,9 @@
         </div>
       </div>
     </header>
+  <section class="main-block">
+  <!-- Main block content goes here -->
+  </section>
   <div class="wrap">
     <div class="card">
       <div class="row" style="justify-content:space-between;">
