--- a/aquariusswaptest16.7/index.html
+++ b/aquariusswaptest16.7/index.html
@@ -6,7 +6,7 @@
   <title>AQUAmb Swap, Lock & APY Dashboard | Mirrasets</title>
 
   <base href="" />
-  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="canonical" href="/" />
 
   <!-- Open Graph -->
@@ -3160,5 +3160,14 @@ function bindSwapInputListeners(){
       document.head.appendChild(s);
     }
   </script>
+
+    <!-- Mirrasets global header/menu scripts -->
+  <script
+    data-cfasync="false"
+    src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js">
+  </script>
+  <script src="https://mirrasets.com/scripts/info.js"></script>
+  <script src="https://mirrasets.com/scripts/mobile-menu.js"></script>
+      
 </body>
 </html>
