--- a/aquariusswaptest16.7/index.html
+++ b/aquariusswaptest16.7/index.html
@@ -472,7 +472,7 @@
         </div>
       </div>
     </header>
-  <section class="main-block">
+  <section class="main-block-aquamb">
   <!-- Main block content goes here -->
   </section>
   <div class="wrap">
