--- a/aquariusswaptest16.7/index.html
+++ b/aquariusswaptest16.7/index.html
@@ -681,12 +681,12 @@
           </p>
 
           <div style="margin-top:6px;">
-            <span class="small muted">Interest-earning total (pending, valid term ≥ 365 days):</span>
+            <span class="small muted">Interest-Earning Total:</span>
             <span id="locksTotal" class="pill">0.0000000 AQUAmb</span>
           </div>
 
           <div style="margin-top:4px;">
-            <span class="small muted">Interest eligibility (threshold 10,000 AQUAmb):</span>
+            <span class="small muted">Interest Eligibility:</span>
             <span id="eligibilityTag" class="tag err">Not eligible</span>
           </div>
 
