--- a/aquariusswaptest16.7/index.html
+++ b/aquariusswaptest16.7/index.html
@@ -119,6 +119,14 @@
     .sell-ticker { font-size: 16px; font-weight: 500; letter-spacing: 0.2px; color: #eaf2ff; }
     .down-arrow { font-size: 13px; opacity: 0.6; margin-left: 2px; position: relative; top: -0.5px; }
 
+    /* Big section titles: Swap / Locker / APY Dashboard */
+.section-title{
+  font-size: clamp(24px, 3.1vw, 30px);
+  font-weight: 800;
+  letter-spacing: 0.3px;
+  margin: 0 0 14px;
+}
+
     .big-input {
       width:100%; border:1px solid #1e2831; background:#0e1419; color:#fff;
       border-radius:16px; padding:10px 12px; margin-top:4px;
@@ -498,7 +506,7 @@
 
       <!-- Swap -->
       <div class="section box card-swap" id="swapBox">
-        <h2>Swap</h2>
+        <h2 class="section-title">Swap</h2>
 
         <!-- Slippage button -->
         <button id="slipBtn" title="Transaction settings">
@@ -581,7 +589,7 @@
 
       <!-- Locker -->
       <div class="section box" id="lockerCard">
-        <h2 style="margin:0 0 8px">Locker</h2>
+        <h2 class="section-title">Locker</h2>
 
         <!-- hidden pubkey (used internally) -->
         <input id="pubkey" type="hidden" />
@@ -669,9 +677,7 @@
       <!--   AQUAmb Locks & APY      -->
       <!-- ========================= -->
       <div class="section box" id="locksApyCard" style="margin-top:28px;">
-        <h2 class="title" style="margin-top:0;">
-          AQUAmb Locks & APY Dashboard
-        </h2>
+        <h2 class="section-title">AQUAmb Locks & APY Dashboard</h2>
 
         <!-- === AQUAmb Locks Overview === -->
         <div class="section" id="locksSection" style="margin-top:18px;">
