--- a/aquariusswaptest16.7/index.html
+++ b/aquariusswaptest16.7/index.html
@@ -582,7 +582,7 @@
     <div class="slab-label">Buy</div>
     <div class="asset-chip">
       <div class="asset-pill">
-        <img id="buyIcon" src="/icons/aquamb.png" alt="AQUAmb" />
+        <img id="buyIcon" alt="AQUAmb" />
         <span>AQUAmb</span>
       </div>
     </div>
@@ -627,7 +627,7 @@
     <div class="slab-label">Lock</div>
     <div class="asset-chip">
       <div class="asset-pill">
-        <img id="lockAquaIcon" src="/icons/aquamb.png" alt="AQUAmb" />
+        <img id="lockAquaIcon" alt="AQUAmb" />
         <span>AQUAmb</span>
       </div>
     </div>
