--- a/aquariusswaptest16.7/index.html
+++ b/aquariusswaptest16.7/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-  <title>AQUAmb Swap, Lock & APY Dashboard | Mirrasets</title>
+  <title>AQUAmb Swap, Lock & APR Dashboard | Mirrasets</title>
 
   <base href="" />
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
@@ -21,7 +21,7 @@
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="AQUAmb Swap, Lock & APY Dashboard" />
+  <meta name="twitter:title" content="AQUAmb Swap, Lock & APR Dashboard" />
   <meta name="twitter:image" content="https://mirrasets.com/images/open_graph2.png" />
   <meta name="twitter:description" content="Swap AQUAmb, lock for 12 months, and track your interest payments on Stellar." />
   <meta name="twitter:url" content="https://mirrasets.com/" />
